...
                        registerModels == LoadableContent.Loading -> {
                    CircularProgressIndicator(modifier = Modifier.align(Alignment.Center))
                }

                registerModels is LoadableContent.Failed -> {
                    Text(
                        text = "Invalid database file selected. No dictionaries found.",
                        fontSize = 20.sp,
                        modifier = Modifier
                            .align(Alignment.Center)
                            .padding(40.dp)
                    )
                    LaunchedEffect(Unit) {
                        scope.launch {
                            val result = snackbarHostState.showSnackbar(
                                message = "An error has occurred. Go back to dictionary manager.",
                                actionLabel = "OK",
                                duration = SnackbarDuration.Indefinite,
                            )

                            when (result) {
                                SnackbarResult.ActionPerformed -> {
                                    navigateBack.invoke()
...
                                    .padding(horizontal = 10.dp, vertical = 12.dp),
                                horizontalArrangement = Arrangement.SpaceBetween
                            ) {
                                OutlinedButton(
                                    onClick = { showNewLanguageDialog = true }
                                ) {
                                    Text("Add new language")
                                }
                                Button(
                                    onClick = {
                                        showImportDialog = true
                                        viewModel.registerDictionaries()
                                    },
                                    enabled = registerModels.content.any { it.tableUiInfo.isSelected }
                                ) {
                                    Text("Register tables")
                                }
                            }
                        }
                    }
                }
            }
...
