...
                                languageFromUi = tableInfo.languageFromUi,
                                languageToUi = tableInfo.languageToUi,
                                isSelected = it,
                            )
                        )
                    },
                    modifier = Modifier.testTag("table_register_switch")
                )
            }

            Spacer(modifier = Modifier.height(8.dp))

            // Name to register
            Row(
                modifier = Modifier.fillMaxWidth(),
                verticalAlignment = Alignment.CenterVertically
            ) {
                Text(
                    text = "Name to register:",
                    modifier = Modifier.width(140.dp)
                )
                OutlinedTextField(
                    value = TextFieldValue(
                        tableInfo.dictionaryName,
                        TextRange(
...
            Row(
                modifier = Modifier.fillMaxWidth(),
                verticalAlignment = Alignment.CenterVertically
            ) {
                Column {
                    Text(
                        text = "Source language:",
                        modifier = Modifier.width(140.dp)
                    )
                    Text(
                        text = tableInfo.originalLanguageFrom,
                        modifier = Modifier.width(140.dp)
                    )
...
            Row(
                modifier = Modifier.fillMaxWidth(),
                verticalAlignment = Alignment.CenterVertically
            ) {
                Column {
                    Text(
                        text = "Destination language:",
                        modifier = Modifier.width(140.dp)
                    )
                    Text(
                        text = tableInfo.originalLanguageTo,
                        modifier = Modifier
                            .width(140.dp)
...
