package eu.kalnarapps.kalnardict.androidui.common.compose

object SemanticTags {

    val languageDialogName = "language_dialog_name"
    val languageDialogCode = "language_dialog_code"
    val importTableProgress = "import_progress"
    val importTableSuccessIcon = "import_table_succes_icon"
    val dictionarySelectorDropDown = "dictionary_selector_dropdown"
    val queryModeButton = "query_mode_selector_button"
    val queryMoreOptions = "query_more_options"
}